Improved the way JWT tokens are generated adjusted various return parameters in OpenAPI and associated endpoints Changed the url for the swapi service for a better one Filled out the generate_new_tokens endpoint and UserDacc function
